<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_view_curreny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewCurrencies"
        android:text="@string/button_currency"
        app:layout_constraintBottom_toTopOf="@+id/button_view_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9" />

    <Button
        android:id="@+id/button_view_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_gold"
        android:onClick="viewGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_view_gold"
        android:onClick="viewCalc"
        app:layout_constraintVertical_bias=".1" />
</androidx.constraintlayout.widget.ConstraintLayout>